--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ author: pro-panda
 subtitle: The life of a frustrated engineer
 
 url: "https://EUING.github.io"
-baseurl: "/EUING"
+baseurl: "/EUING.github.io"
 
 footer_only_homepage: true
-footer_url: "https://github.com/EUING"
+footer_url: "https://github.com/EUING.github.io"
 footer_text: "Theme by rahul-bothra"
 
 profile-picture: assets/profile.png
