--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title: EUING
+title: Parchment
 author: pro-panda
 subtitle: The life of a frustrated engineer
 
 url: "https://EUING.github.io"
-baseurl: "/EUING.github.io"
+baseurl: "/parchment"
 
 footer_only_homepage: true
-footer_url: "https://github.com/EUING.github.io"
+footer_url: "https://github.com/EUING"
 footer_text: "Theme by rahul-bothra"
 
 profile-picture: assets/profile.png
