블로그 subtitle 수정

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: EUING
-author: pro-panda
-subtitle: The life of a frustrated engineer
+author: EUING
+subtitle: from hardware to software
 
 url: "https://EUING.github.io"
 baseurl: ""
